--- a/Front/src/styles/card.css
+++ b/Front/src/styles/card.css
@@ -3,13 +3,11 @@
     display: flex;
     align-items: center;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     padding: 10px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    margin-right: 10px;
+    margin: 10px;    
     width: 350px;
-    height: 200px;
+    height: 190px;
     background-color: rgb(247, 243, 231);
     color: rgb(24, 24, 24);
     
